import { Route } from '@solidjs/router';
import { screen, waitFor } from '@solidjs/testing-library';
import { renderProviders } from '../../utils/test.util';
import NotFoundPage from './NotFound.page';

describe('NotFoundPage', () => {
  it('should render correctly', async () => {
    // ARRANGE
    const { container } = renderProviders(() => <Route path="/" component={NotFoundPage} />);

    // ASSERT
    await waitFor(() => {
      expect(screen.getByText(/404: Not Found/)).toBeInTheDocument();
      expect(container.firstChild).toMatchSnapshot();
    });
  });
});
