// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotFoundPage > should render correctly 1`] = `
<section
  class="text-gray-700 p-8"
>
  <h1
    class="text-2xl font-bold"
  >
    404: Not Found
  </h1>
  <p
    class="mt-4"
  >
    It's gone 😞
  </p>
</section>
`;

exports[`NotFoundPage > should render correctly 2`] = `
<section
  class="flex h-screen flex-col items-center justify-center space-y-3 text-primary-content"
>
  <h1
    class="text-3xl font-bold italic"
  >
    404: Not Found
  </h1>
  <p
    class="!mb-5"
  >
    It's gone 😞
  </p>
  <a
    aria-current="page"
    class="link-secondary link active"
    href="/"
    link=""
  >
    Go back to home 🏡
  </a>
</section>
`;
